force-app/main/default/objects/LeanData__Matched_View_Setting__c/LeanData__Matched_View_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores settings for Matched Views</description>
    <label>Matched View Setting</label>
</CustomObject>