force-app/main/default/objects/LeanData__Matched_View_Setting__c/fields/LeanData__Lead_Columns1__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Lead_Columns1__c</fullName>
    <label>Lead Columns1</label>
    <type>TextArea</type>
</CustomField>