force-app/main/default/objects/LeanData__Matched_View_Setting__c/fields/LeanData__LogSummary_Columns2__c.field-meta.xml
<CustomField>
    <fullName>LeanData__LogSummary_Columns2__c</fullName>
    <label>LogSummary Columns2</label>
    <type>TextArea</type>
</CustomField>